Fix button alignment

--- a/packages/frontend/src/style.less
+++ b/packages/frontend/src/style.less
@@ -2342,6 +2342,7 @@ div.vertical-spacer {
 span.like-a-button {
   display: inline-block;
   padding: 1px 4px 1px 4px;
+  vertical-align: middle;
 }
 
 .drag-handle {
